# badscript

./: CMakeLists.txt  LICENSE  README.md  example.bs  main.c
libraries/: CMakeLists.txt  count100.c  count100_dll.c
