cmake_minimum_required(VERSION 3.10)
project(count100 C)
add_library(count100 SHARED count100.c count100_dll.c)
set_target_properties(count100 PROPERTIES
RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/libraries"
RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin/libraries"
RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/libraries"
RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/bin/libraries"
LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/libraries"
LIBRARY_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin/libraries"
LIBRARY_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/libraries"
LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/bin/libraries"
ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/libraries"
ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin/libraries"
ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/libraries"
ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/bin/libraries")
target_link_options(count100 PRIVATE "/NODEFAULTLIB:msvcrt.lib" "/NODEFAULTLIB:libcmt.lib" "/ENTRY:DllMain")
